--- a/pat.html
+++ b/pat.html
@@ -88,7 +88,7 @@
   </div>
 
   <div id="webdevtools" class="container-fluid m-0 p-0 d-flex justify-content-end">
-    <img class="justify-content-end" src="/MyCodes/Images/frontendtools.png" alt="">
+    <img class="justify-content-end" src="Images/frontendtools.png" alt="">
   </div>
 
 </div>
@@ -177,15 +177,15 @@
     <div class="image1"> 
       <img  alt="" class="img-thumbnail" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
-    <img  alt="" class="line2" src="/MyCodes/Images/line2.png">
+    <img  alt="" class="line2" src="Images/line2.png">
     <div class="image2">
       <img  alt="" class="img-thumbnail mb-0" src="https://images.unsplash.com/photo-1547027072-332f09bd6bb3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
-    <img  alt="" class="line3" src="/MyCodes/Images/line3.png">
+    <img  alt="" class="line3" src="Images/line3.png">
     <div class="image3">
       <img  alt="" class="img-thumbnail" src="https://images.unsplash.com/photo-1574717024653-61fd2cf4d44d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
-    <img  alt="" class="line4" src="/MyCodes/Images/line4.png">
+    <img  alt="" class="line4" src="Images/line4.png">
     <div class="image4">
       <img  alt="" class="img-thumbnail mb-3" src="https://images.unsplash.com/photo-1523474438810-b04a2480633c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
