--- a/pat.html
+++ b/pat.html
@@ -173,7 +173,7 @@
 <div id="" class="container-fluid bg-none px-0">
 
   <div id="lines" class="container-fluid">
-    <img  alt="" class="line1" src="/MyCodes/Images/line1.png">
+    <img  alt="" class="line1" src="Images/line1.png">
     <div class="image1"> 
       <img  alt="" class="img-thumbnail" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
