--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <!-- personal stylesheet for priority, must be the last import -->
-<link rel="stylesheet" type="text/css" href="pat.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 
 <head>
     <meta charset="UTF-8">
