--- a/old.html
+++ b/old.html
@@ -6,7 +6,7 @@
 
 
 <!-- personal stylesheet for priority, must be the last import -->
-<link rel="stylesheet" type="text/css" href="index.css">
+<link rel="stylesheet" type="text/css" href="old.css">
 
 <head>
     <meta charset="UTF-8">
