--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
               <p class="card-text text-center">
                 Drafting is also one of the things i love to do mostly on my free time. When I have nothing to do and I want
                 to create a website or its UI and UX. I would always draft them in Adobe XD and create my own templates 
-                if ever I need them edited in Photoshop. I still consider myself and entry level UI designer but through
-                outstanding youtube videos regarding UI and UX Development, they give be the best ideas of thinking my own designs.
+                if ever I need them edited in Photoshop. I still consider myself an entry level UI designer but through
+                outstanding youtube videos regarding UI and UX Development, they give be the best ideas in creating my own designs.
               </p>
             </div>
           </div>
