--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
     <h2 id="thingsido" class="d-flex justify-content-center text-uppercase text-white py-2">
       Things i do
     </h2>
-    <p id="aboutthingsido" class="container text-center text-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis fugiat itaque exercitationem cupiditate dolorum qui architecto 
-      ad voluptas, id cum tenetur suscipit pariatur aliquam similique ipsa? Tenetur dolor provident animi, et doloribus nobis dignissimos numquam aliquid facilis minus laudantium saepe? Excepturi ex 
-      iste inventore sapiente! Quo vel dolorum reprehenderit neque nam nemo ut, quidem tempora debitis perferendis. Vero exercitationem maxime debitis voluptatum provident fugiat dolore nobis earum aut, 
-      porro sit architecto quaerat eum natus laudantium illo. Eius quasi, veniam omnis quos assumenda perspiciatis ipsam culpa eveniet commodi obcaecati quae rerum recusandae tenetur iure nihil repellendus, 
-      voluptates vel veritatis autem beatae alias nobis eligendi? Magnam, qui? Quidem perferendis tenetur voluptatum veritatis necessitatibus fuga fugit molestias iusto possimus autem eaque ullam, omnis neque. 
-      Expedita beatae reiciendis sequi veritatis error cumque similique accusantium.
+    <p id="aboutthingsido" class="container text-center text-white">I am a BS Computer Engineering graduate from Holy Angel University. 
+      Loves to draft and develop websites mainly frontend.
+      Highly capable of using html,css, bootstrap and more other tools a frontend developer would need.
+      Proficient in using Adobe XD and Adobe Photoshop which I use in drafting my websites.
+      Self taught video editor. 
+      I use Vegas pro as my editing software.
+      I also moderately play games in any console or gaming platform.
     </p>
     
   <div class="container-fluid">
