--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <div id="secondheadline" class="container-fluid justify-content-center m-0 py-3">
 
     <h2 id="thingsido" class="d-flex justify-content-center text-uppercase text-white py-2">
-      Things i do
+      My Skills
     </h2>
     <p id="aboutthingsido" class="container text-center text-white">I am a BS Computer Engineering graduate from Holy Angel University. 
       Loves to draft and develop websites mainly frontend.
