--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
               <p>I am Patrick Laxamana a Computer Engineering graduate 
                 from Holy Angel University. This is my official online portfolio.
-                Feel free to contact me through email or follow me on my social medias.
+                Feel free to send me an email or follow me through social media.
               </p>
       
             </div>
