--- a/certs.html
+++ b/certs.html
@@ -33,7 +33,7 @@
 
   <div class="jumbotron">
     <h1><i class="glyphicon glyphicon-certificate"></i> My Certificates </h1>
-    <p>I have not scanned all my certificates yet so i put some sample image first from <a href="https://unsplash.com/">unsplash.com</a></p> 
+    <p>I have not scanned all my certificates yet so i put some sample images first from <a href="https://unsplash.com/">unsplash.com</a></p> 
   </div>
 
     <div class="row">
