--- a/certs.html
+++ b/certs.html
@@ -18,7 +18,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-				<a href="https://laxamanapatrick.github.io" class="navbar-brand"><span class="glyphicon glyphicon-user"></span>Patrick Laxamana</a>
+				<a href="https://laxamanapatrick.github.io/patricklaxamana" class="navbar-brand"><span class="glyphicon glyphicon-user"></span>Patrick Laxamana</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
