--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   More
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="https://laxamanapatrick.github.io/certs.html">
+                  <a class="dropdown-item" href="https://laxamanapatrick.github.io/patricklaxamana/certs.html">
                     My Certificates
                   </a>
                   <a class="dropdown-item" href="">
